Done home  + layout + login

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
 APP_FULL_NAME=Laravel
 APP_NAME=Laravel
 APP_ENV=local
+APP_LANG=en
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+ASSET_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
