--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 ASSET_URL=http://localhost
+API_KEY_AUTOCARD=
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
