--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ APP_DEBUG=true
 APP_URL=http://localhost
 ASSET_URL=http://localhost
 API_KEY_AUTOCARD=
+API_NAPVIP_USERNAME=
+API_NAPVIP_PASSWORD=
+API_NAPVIP_KEY=
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
