--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
+    restart: always
     networks:
       - network
 
@@ -20,6 +21,7 @@ services:
       context: .
       dockerfile: ./docker/php/Dockerfile
     working_dir: /app
+    restart: always
     volumes:
       - .:/app
       - ./docker/php/php.ini:/usr/local/etc/php/php.ini
